--- a/src/app/forum/forum-categories/forum-categories-category/forum-categories-category.component.scss
+++ b/src/app/forum/forum-categories/forum-categories-category/forum-categories-category.component.scss
@@ -1,6 +1,47 @@
+@use 'variables' as v;
+
 .actions {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   margin-bottom: 1rem;
+}
+
+.list {
+  margin-right: -1rem;
+  margin-left: -1rem;
+}
+
+.list-item {
+  padding-right: 1rem;
+  padding-left: 1.25rem;
+}
+
+.list-item-line {
+  white-space: normal;
+  &:not(:first-of-type) {
+    font-size: 0.9em;
+    color: v.$primary-400;
+  }
+}
+
+.suffix {
+  white-space: nowrap;
+  padding-left: 1rem;
+}
+
+.suffix.last-post {
+  min-width: 140px;
+  max-width: 140px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  place-items: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  > div {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
