- fixed autocomplete closing and not opening again when there are items to select - added "closeOnSelect" and "replaceInputWithValue" input to AutocompleteComponent - added component to add/delete moderators

--- a/src/app/forum/forum-categories/forum-categories.component.html
+++ b/src/app/forum/forum-categories/forum-categories.component.html
@@ -1,6 +1,10 @@
 <ng-container *ngLet="isAdmin$ | async as isAdmin">
   <div class="actions" *ngIf="isAdmin">
     <bio-checkbox [(checked)]="hideDeleted">Hide deleted</bio-checkbox>
+    <button bioButton type="button" (click)="openManageModerators()" [loading]="loadingManageModeratorsModal">
+      <bio-icon [mdi]="mdiAccountTie"></bio-icon>
+      Manage moderators
+    </button>
     <button bioButton type="button" (click)="openAddEditModal()" [loading]="loadingAddEditModal">
       <bio-icon>add</bio-icon>
       Add category
