--- a/src/app/shared/multi-select/multi-select-items/multi-select-items.component.html
+++ b/src/app/shared/multi-select/multi-select-items/multi-select-items.component.html
@@ -1,13 +1,22 @@
 <div class="search">
   <bio-form-field>
-    <input bioInput placeholder="Search" (input)="onInput($event)" [disabled]="loading" />
+    <input bioInput placeholder="Search" (input)="onInput($event)" [disabled]="loading" #searchRef />
     <bio-icon bioSuffix>search</bio-icon>
+    <bio-hint *ngIf="searchHint">{{ searchHint }}</bio-hint>
   </bio-form-field>
 </div>
-<bio-list [bioLoading]="loading" *ngIf="items | searchIf: useInternalSearch:label:(term$ | async) as itemsFiltered">
+<bio-list *ngIf="items | searchIf: useInternalSearch:label:(term$ | async) as itemsFiltered">
+  <bio-loading *ngIf="loading"></bio-loading>
   <bio-list-item *ngIf="!itemsFiltered.length"> No data found </bio-list-item>
   <bio-list-item *ngFor="let item of itemsFiltered; trackBy: trackById">
-    <button type="button" bioButton icon bioPrefix (click)="selectItem.emit(item)">
+    <button
+      type="button"
+      bioButton
+      icon
+      bioPrefix
+      (click)="selectItem.emit(item)"
+      [disabled]="disabledKey && !!item[disabledKey]"
+    >
       <bio-icon>{{ icon }}</bio-icon>
     </button>
     <bio-list-item-line>
