- change css selector from .list to .bio-list - _list.scss is now global - ListComponent is now ListDirective - changed MultiSelectComponent to be more declarative

--- a/src/app/player/player-shared/player-search-modal/player-search-modal.component.scss
+++ b/src/app/player/player-shared/player-search-modal/player-search-modal.component.scss
@@ -10,7 +10,7 @@ $list-item-height: 44px;
   height: $list-item-height;
 }
 
-.list {
+.bio-list {
   height: $list-item-height * 10;
   overflow: auto;
 }
