--- a/src/app/header/side-menu/side-menu.component.scss
+++ b/src/app/header/side-menu/side-menu.component.scss
@@ -13,7 +13,7 @@
   overflow: auto;
   @include m.elevation(3);
 
-  .list .list-item {
+  .bio-list .list-item {
     padding: 0.75rem 1rem;
     align-items: center;
   }
