--- a/src/app/region/region-select/region-select.component.scss
+++ b/src/app/region/region-select/region-select.component.scss
@@ -8,7 +8,7 @@ $mobile-height: $item-height * 7;
   height: $height;
 }
 
-.list.modal-content {
+.bio-list.modal-content {
   padding: 0;
   max-height: $height;
 
