--- a/src/app/forum/forum-categories/forum-categories-category/forum-categories-category.component.html
+++ b/src/app/forum/forum-categories/forum-categories-category/forum-categories-category.component.html
@@ -16,7 +16,7 @@
   >
     <bio-list-item-line>{{ subCategory.name }}</bio-list-item-line>
     <bio-list-item-line>{{ subCategory.description }}</bio-list-item-line>
-    <bio-list-item-line *ngIf="!isMobile" class="moderators">
+    <bio-list-item-line *ngIf="!isMobile && subCategory.moderators.length" class="moderators">
       Moderators:
       <a
         class="white"
@@ -26,7 +26,6 @@
       >
         {{ moderator.playerPersonaName }}
       </a>
-      <button bioButton small *ngIf="isAdmin">Manage moderators</button>
     </bio-list-item-line>
     <div bioSuffix>
       <div>{{ subCategory.postCount | number: '1.0-0' }} Posts</div>
@@ -51,15 +50,19 @@
       </div>
       <div>on {{ subCategory.lastPostDate | authDateFormat }}</div>
     </div>
-    <div bioSuffix>
+    <div bioSuffix *ngIf="isAdmin">
       <button
         bioButton
-        *ngIf="isAdmin"
+        type="button"
         (click)="openAddEditSubCategory(subCategory.id, $event)"
         [disabled]="loadingSubCategoryAddEditModal"
       >
         <bio-icon>edit</bio-icon>
         Edit sub category
+      </button>
+      <button bioButton type="button">
+        <bio-icon [mdi]="mdiAccountTie"></bio-icon>
+        Manage moderators
       </button>
     </div>
   </a>
