--- a/src/app/forum/forum-categories/forum-categories.component.scss
+++ b/src/app/forum/forum-categories/forum-categories.component.scss
@@ -22,3 +22,8 @@
 .accordion.cdk-drop-list-dragging .accordion-item:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.drag-handle {
+  cursor: move;
+  margin-right: 0.5rem;
+}
