--- a/src/app/forum/forum-moderator-management/forum-moderator-management.component.html
+++ b/src/app/forum/forum-moderator-management/forum-moderator-management.component.html
@@ -10,7 +10,7 @@
     <bio-list
       bioMultiSelectItems
       items
-      (search)="onSearch($event)"
+      (searchChange)="onSearch($event)"
       debounceTime="400"
       [bioLoading]="loadingPlayers"
       hint="Type at least 3 characters to start searching"
@@ -23,9 +23,16 @@
         <bio-list-item-line>{{ moderator.playerPersonaName }}</bio-list-item-line>
       </bio-list-item>
     </bio-list>
-    <bio-list bioMultiSelectItems selected>
+    <bio-list bioMultiSelectItems selected [(search)]="moderatorsSelectedSearch" debounceTime="400">
       <bio-list-item *ngIf="!moderatorsSelected.length">No data found</bio-list-item>
-      <bio-list-item *ngFor="let moderator of moderatorsSelected; trackBy: trackById">
+      <bio-list-item
+        *ngFor="
+          let moderator of moderatorsSelected | search: 'playerPersonaName':moderatorsSelectedSearch;
+          trackBy: trackById
+        "
+        bioTooltip="Moderator is assigned to some sub category, and can't be deleted"
+        [bioTooltipDisabled]="moderator.deleteAllowed"
+      >
         <button
           bioButton
           type="button"
