--- a/src/app/forum/forum-categories/forum-categories-category/forum-categories-category.component.scss
+++ b/src/app/forum/forum-categories/forum-categories-category/forum-categories-category.component.scss
@@ -1,4 +1,5 @@
 @use 'variables' as v;
+@use 'mixins' as m;
 
 .actions {
   display: flex;
@@ -19,6 +20,7 @@
 
 .list-item-line {
   white-space: normal;
+
   &:not(:first-of-type) {
     font-size: 0.9em;
     color: v.$primary-400;
@@ -40,6 +42,7 @@
   place-items: normal;
   overflow: hidden;
   text-overflow: ellipsis;
+
   > div {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -48,4 +51,11 @@
 
 .moderators {
   white-space: normal;
+}
+
+@include m.drag-and-drop();
+
+.cdk-drag-handle {
+  cursor: move;
+  margin-right: 0.5rem;
 }
