--- a/src/app/forum/forum-categories/forum-categories.component.scss
+++ b/src/app/forum/forum-categories/forum-categories.component.scss
@@ -7,23 +7,9 @@
   margin-bottom: 1rem;
 }
 
-.cdk-drag-preview {
-  @include m.elevation(3);
-}
+@include m.drag-and-drop();
 
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.accordion.cdk-drop-list-dragging .accordion-item:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.drag-handle {
+.cdk-drag-handle {
   cursor: move;
   margin-right: 0.5rem;
 }
