--- a/src/app/forum/forum-categories/forum-categories-category/forum-categories-category.component.scss
+++ b/src/app/forum/forum-categories/forum-categories-category/forum-categories-category.component.scss
@@ -38,7 +38,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   place-items: normal;
   overflow: hidden;
   text-overflow: ellipsis;
