- fixed route to sub category component - do not send request when the order of sub categories haven't changed - added 2 TODOS

--- a/src/app/forum/forum-categories/forum-categories-category/forum-categories-category.component.html
+++ b/src/app/forum/forum-categories/forum-categories-category/forum-categories-category.component.html
@@ -20,7 +20,7 @@
   <bio-list-item *ngIf="!category.subCategories.length"> No sub categories found! </bio-list-item>
   <bio-list-item
     *ngFor="let subCategory of category.subCategories; trackBy: trackById"
-    [routerLink]="['sub-category', subCategory.id]"
+    [routerLink]="['category', category.id, 'sub-category', subCategory.id]"
     cdkDrag
     [cdkDragData]="subCategory"
   >
