--- a/src/app/forum/forum-categories/forum-categories.component.html
+++ b/src/app/forum/forum-categories/forum-categories.component.html
@@ -44,6 +44,14 @@
           (orderChange)="onSubCategoryOrderChange($event)"
         ></bio-forum-categories-category>
       </bio-accordion-item>
+      <bio-accordion-item accordionTitle="Recent posts" expanded>
+        Recents posts
+        <!--TODO-->
+      </bio-accordion-item>
+      <bio-accordion-item accordionTitle="Players online" expanded>
+        Players online
+        <!--TODO-->
+      </bio-accordion-item>
     </bio-accordion>
   </ng-container>
 </ng-container>
