--- a/src/app/forum/forum-categories/forum-categories.component.html
+++ b/src/app/forum/forum-categories/forum-categories.component.html
@@ -45,8 +45,7 @@
         ></bio-forum-categories-category>
       </bio-accordion-item>
       <bio-accordion-item accordionTitle="Recent posts" expanded>
-        Recents posts
-        <!--TODO-->
+        <bio-forum-categories-recent-topics [recentTopics]="recentTopics"></bio-forum-categories-recent-topics>
       </bio-accordion-item>
       <bio-accordion-item accordionTitle="Players online" expanded>
         Players online
