--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,7 +12,7 @@ $dark-overlay: #4c4c4c;
 $dark: #303030;
 
 $primary-type: 'primary';
-$primary-pallete: (
+$primary-palette: (
   0: #393b44,
   50: #4f5460,
   100: #626b77,
@@ -21,19 +21,21 @@ $primary-pallete: (
   400: #d6e0f0,
   500: #f1f3f8,
   600: #f7f7ff,
+  700: #fff,
 );
 
-$primary: map-get($primary-pallete, 0);
-$primary-50: map-get($primary-pallete, 50);
-$primary-100: map-get($primary-pallete, 100);
-$primary-200: map-get($primary-pallete, 200);
-$primary-300: map-get($primary-pallete, 300);
-$primary-400: map-get($primary-pallete, 400);
-$primary-500: map-get($primary-pallete, 500);
-$primary-600: map-get($primary-pallete, 600);
+$primary: map-get($primary-palette, 0);
+$primary-50: map-get($primary-palette, 50);
+$primary-100: map-get($primary-palette, 100);
+$primary-200: map-get($primary-palette, 200);
+$primary-300: map-get($primary-palette, 300);
+$primary-400: map-get($primary-palette, 400);
+$primary-500: map-get($primary-palette, 500);
+$primary-600: map-get($primary-palette, 600);
+$primary-700: map-get($primary-palette, 700);
 
 $accent-type: 'accent';
-$accent-pallete: (
+$accent-palette: (
   0: #00587a,
   50: #005f85,
   100: #00709d,
@@ -42,19 +44,21 @@ $accent-pallete: (
   400: #008dcf,
   500: #009ee9,
   600: #00acff,
+  700: #3bb3fc,
 );
 
-$accent: map-get($accent-pallete, 0);
-$accent-50: map-get($accent-pallete, 50);
-$accent-100: map-get($accent-pallete, 100);
-$accent-200: map-get($accent-pallete, 200);
-$accent-300: map-get($accent-pallete, 300);
-$accent-400: map-get($accent-pallete, 400);
-$accent-500: map-get($accent-pallete, 500);
-$accent-600: map-get($accent-pallete, 600);
+$accent: map-get($accent-palette, 0);
+$accent-50: map-get($accent-palette, 50);
+$accent-100: map-get($accent-palette, 100);
+$accent-200: map-get($accent-palette, 200);
+$accent-300: map-get($accent-palette, 300);
+$accent-400: map-get($accent-palette, 400);
+$accent-500: map-get($accent-palette, 500);
+$accent-600: map-get($accent-palette, 600);
+$accent-700: map-get($accent-palette, 700);
 
 $danger-type: 'danger';
-$danger-pallete: (
+$danger-palette: (
   0: #f00,
   50: #ed1010,
   100: #dc1a1a,
@@ -63,19 +67,21 @@ $danger-pallete: (
   400: #c14e4e,
   500: #ba5d5d,
   600: #b16a6a,
+  700: #dba2a2,
 );
 
-$danger: map-get($danger-pallete, 0);
-$danger-50: map-get($danger-pallete, 50);
-$danger-100: map-get($danger-pallete, 100);
-$danger-200: map-get($danger-pallete, 200);
-$danger-300: map-get($danger-pallete, 300);
-$danger-400: map-get($danger-pallete, 400);
-$danger-500: map-get($danger-pallete, 500);
-$danger-600: map-get($danger-pallete, 600);
+$danger: map-get($danger-palette, 0);
+$danger-50: map-get($danger-palette, 50);
+$danger-100: map-get($danger-palette, 100);
+$danger-200: map-get($danger-palette, 200);
+$danger-300: map-get($danger-palette, 300);
+$danger-400: map-get($danger-palette, 400);
+$danger-500: map-get($danger-palette, 500);
+$danger-600: map-get($danger-palette, 600);
+$danger-700: map-get($danger-palette, 700);
 
 $success-type: 'success';
-$success-pallete: (
+$success-palette: (
   0: #4caf50,
   50: #62cb68,
   100: #70dd76,
@@ -84,16 +90,18 @@ $success-pallete: (
   400: #90fd96,
   500: #9cffa2,
   600: #acffb1,
+  700: #ceffd1,
 );
 
-$success: map-get($success-pallete, 0);
-$success-50: map-get($success-pallete, 50);
-$success-100: map-get($success-pallete, 100);
-$success-200: map-get($success-pallete, 200);
-$success-300: map-get($success-pallete, 300);
-$success-400: map-get($success-pallete, 400);
-$success-500: map-get($success-pallete, 500);
-$success-600: map-get($success-pallete, 600);
+$success: map-get($success-palette, 0);
+$success-50: map-get($success-palette, 50);
+$success-100: map-get($success-palette, 100);
+$success-200: map-get($success-palette, 200);
+$success-300: map-get($success-palette, 300);
+$success-400: map-get($success-palette, 400);
+$success-500: map-get($success-palette, 500);
+$success-600: map-get($success-palette, 600);
+$success-700: map-get($success-palette, 700);
 
 $mobile-width: 599px;
 $medium-screen-width: 768px;
