- added topics - added sub-category component - added input itemsPerPageHidden in PaginationComponent

--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,4 +1,4 @@
-<div class="items-per-page">
+<div class="items-per-page" *ngIf="!itemsPerPageHidden">
   <span> Items per page: </span>
   <bio-select
     [disabled]="!itemCount"
