--- a/src/app/forum/forum-sub-category/forum-sub-category.component.html
+++ b/src/app/forum/forum-sub-category/forum-sub-category.component.html
@@ -1,1 +1,28 @@
-<p>forum-sub-category works!</p>
+<bio-card dark>
+  <bio-loading *ngIf="loading"></bio-loading>
+  <bio-card-content>
+    <div class="grid-container grid-container--header">
+      <div class="grid-container__name">Topic name</div>
+      <div class="grid-container__created-by">Created by</div>
+      <div class="grid-container__creation-date">Creation date</div>
+      <div class="grid-container__replies">Replies</div>
+      <div class="grid-container__views">Views</div>
+      <div class="grid-container__last-post">Last post</div>
+    </div>
+    <a
+      bioForumSubCategoryTopic
+      [routerLink]="['topic', topic.id, 'page', 1]"
+      *ngFor="let topic of subCategory.topics.items; trackBy: trackById"
+      [topic]="topic"
+    >
+    </a>
+  </bio-card-content>
+  <bio-card-actions end>
+    <bio-pagination
+      [(currentPage)]="page"
+      (currentPageChange)="onPageChange($event)"
+      [meta]="subCategory.topics.meta"
+      itemsPerPageHidden
+    ></bio-pagination>
+  </bio-card-actions>
+</bio-card>
