--- a/src/app/shared/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/breadcrumbs/breadcrumbs.component.html
@@ -1,1 +1,17 @@
-{{ breadcrumbs$ | async | json }}
+<ng-container *ngFor="let breadcrumb of breadcrumbs$ | async; trackBy: trackBy; let $last = last">
+  <span *ngIf="$last; else notLast" class="item">
+    {{ breadcrumb.name }}
+  </span>
+  <ng-template #notLast>
+    <a
+      class="item"
+      [routerLink]="breadcrumb.path"
+      [queryParams]="breadcrumb.queryParams"
+      [queryParamsHandling]="breadcrumb.queryParamsHandling"
+      [preserveFragment]="breadcrumb.preserveFragment ?? false"
+    >
+      {{ breadcrumb.name }}
+    </a>
+    <span class="separator">/</span>
+  </ng-template>
+</ng-container>
