--- a/src/app/forum/forum-topic/forum-topic.component.scss
+++ b/src/app/forum/forum-topic/forum-topic.component.scss
@@ -1,3 +1,16 @@
 .card {
   position: relative;
 }
+
+.card-content {
+  padding: 0;
+}
+
+.actions {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  display: flex;
+  justify-content: flex-end;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
