--- a/src/app/forum/forum-topic/forum-topic-post/forum-topic-post.component.scss
+++ b/src/app/forum/forum-topic/forum-topic-post/forum-topic-post.component.scss
@@ -47,7 +47,7 @@
 .content {
   padding: 0 0.5rem 0.5rem 0.5rem;
   border-radius: v.$radius;
-  // color: white;
+  color: white;
 
   .actions {
     margin-top: 0.5rem;
