--- a/src/app/forum/forum-topic/forum-topic-post/forum-topic-post.component.html
+++ b/src/app/forum/forum-topic/forum-topic-post/forum-topic-post.component.html
@@ -37,22 +37,13 @@
     </div>
   </div>
   <div class="content">
-    <ckeditor
-      [editor]="editor"
-      [config]="config"
-      style="color: black"
-      [(ngModel)]="model"
-      [ngModelOptions]="{ standalone: true }"
-    ></ckeditor>
-    <hr />
-    {{ model | json }}
-    <!--    <bio-viewer [content]="post.content" *ngIf="!editing; else editingTemplate"> </bio-viewer>-->
-    <!--    <ng-template #editingTemplate>-->
-    <!--      <bio-editor controlName="content"></bio-editor>-->
-    <!--      <div class="actions">-->
-    <!--        <button primary bioButton type="button" (click)="closeEdit()">Cancel</button>-->
-    <!--        <button primary bioButton type="submit">Save</button>-->
-    <!--      </div>-->
-    <!--    </ng-template>-->
+    <ckeditor-view [content]="post.content" *ngIf="!editing; else editingTemplate"></ckeditor-view>
+    <ng-template #editingTemplate>
+      <ckeditor [editor]="editor" controlName="content"></ckeditor>
+      <div class="actions">
+        <button primary bioButton type="button" (click)="closeEdit()" [disabled]="saving">Cancel</button>
+        <button primary bioButton type="submit" [loading]="saving" [disabled]="form.pristine">Save</button>
+      </div>
+    </ng-template>
   </div>
 </form>
