--- a/src/styles/_plugins.scss
+++ b/src/styles/_plugins.scss
@@ -1,5 +1,6 @@
 @use '~@angular/cdk';
 @use '~highlight.js/scss/base16/material-vivid';
+@use 'ckeditor';
 
 @include cdk.a11y-visually-hidden();
 @include cdk.text-field();
